--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "wa-bot-aesthetic",
+  "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "WhatsApp Bot using baileys-pro with aesthetic list messages",
-  "type": "module",
+  "description": "WhatsApp Bot dengan baileys-pro",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node --watch index.js"
   },
+  "keywords": ["whatsapp-bot", "baileys-pro"],
+  "author": "Owner",
+  "license": "MIT",
   "dependencies": {
     "baileys-pro": "^0.0.5",
-    "qrcode-terminal": "^0.12.0",
-    "pino": "^9.0.0"
+    "qrcode-terminal": "^0.12.0"
   }
 }
